--- a/gwt-material/pom.xml
+++ b/gwt-material/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>gwt-material-parent</artifactId>
-        <groupId>com.github.gwtmaterialdesign</groupId>
+        <groupId>com.github.gwtmaterialdesign-rtl</groupId>
         <version>2.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
