--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.gwtmaterialdesign</groupId>
+    <groupId>com.github.gwtmaterialdesign-rtl</groupId>
     <artifactId>gwt-material-parent</artifactId>
     <packaging>pom</packaging>
     <version>2.0.1</version>
@@ -164,30 +164,30 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
-                <configuration>
-                    <!-- comment out for now because doesn't work on JDK < 8 -->
-                    <!--<additionalparam>-Xdoclint:none</additionalparam>-->
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <locale>en</locale>
-                    <linksource>true</linksource>
-                    <validateLinks>true</validateLinks>
-                    <links>
-                        <link>https://github.com/gwtproject/gwt/tree/master/doc/validation-package-list</link>
-                    </links>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-javadoc-plugin</artifactId>-->
+                <!--<version>2.10.3</version>-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; comment out for now because doesn't work on JDK < 8 &ndash;&gt;-->
+                    <!--&lt;!&ndash;<additionalparam>-Xdoclint:none</additionalparam>&ndash;&gt;-->
+                    <!--<encoding>${project.build.sourceEncoding}</encoding>-->
+                    <!--<locale>en</locale>-->
+                    <!--<linksource>true</linksource>-->
+                    <!--<validateLinks>true</validateLinks>-->
+                    <!--<links>-->
+                        <!--<link>https://github.com/gwtproject/gwt/tree/master/doc/validation-package-list</link>-->
+                    <!--</links>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>jar</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
